[gd_scene load_steps=8 format=3 uid="uid://br1v6v0da2v1n"]

[ext_resource type="Texture2D" uid="uid://cw6payn2hyg8m" path="res://Entities/Enemies/_TemplateEnemy/Assets/bar_shadow_round_outline_small.png" id="1_ejg2d"]
[ext_resource type="Script" uid="uid://cou6jej7wqrx2" path="res://Entities/Enemies/_TemplateEnemy/template_enemy.gd" id="1_pa3af"]
[ext_resource type="Texture2D" uid="uid://efm7vnhsuk84" path="res://Entities/Enemies/_TemplateEnemy/Assets/bar_round_small.png" id="2_pa3af"]
[ext_resource type="SpriteFrames" uid="uid://br8obf1poanq3" path="res://Entities/Enemies/_TemplateEnemy/template_enemy_animations.tres" id="2_u23yv"]
[ext_resource type="StyleBox" uid="uid://6m1q8jw2p6hi" path="res://Themes/Styleboxes/new_style_stun_flat.tres" id="3_e31ia"]
[ext_resource type="StyleBox" uid="uid://c1kyee8pg41dh" path="res://Themes/Styleboxes/stylebox_dot_bar.tres" id="3_htrcs"]
[ext_resource type="StyleBox" uid="uid://djt88h8lsiqgx" path="res://Themes/Styleboxes/stylebox_slow_bar.tres" id="4_wklvk"]

[node name="TemplateEnemy" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_pa3af")

[node name="Animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = ExtResource("2_u23yv")
animation = &"variant_1_walk_south_west"
autoplay = "variant_1_walk_south_west"
frame_progress = 0.292839
offset = Vector2(0, -175)

[node name="PositionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, -44)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, -44)

[node name="ProgressBarContainer" type="VBoxContainer" parent="."]
offset_left = -48.0
offset_top = -185.0
offset_right = 48.0
offset_bottom = -127.0
theme_override_constants/separation = 6
alignment = 2

[node name="StunBar" type="ProgressBar" parent="ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/fill = ExtResource("3_e31ia")
value = 50.0
show_percentage = false

[node name="SlowBar" type="ProgressBar" parent="ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/fill = ExtResource("4_wklvk")
value = 50.0
show_percentage = false

[node name="DotBar" type="ProgressBar" parent="ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/fill = ExtResource("3_htrcs")
value = 50.0
show_percentage = false

[node name="HealthBar" type="TextureProgressBar" parent="ProgressBarContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
value = 50.0
texture_under = ExtResource("1_ejg2d")
texture_progress = ExtResource("2_pa3af")

[node name="TargetPoint" type="Marker2D" parent="."]
